Add additional checks for serviceId during sending flow.